--- a/xzarsk03-contracts-for-concurrency.tex
+++ b/xzarsk03-contracts-for-concurrency.tex
@@ -70,6 +70,7 @@
 
 \usepackage{mathabx}
 \usepackage{tikz}
+\usepackage{lipsum}
 
 \usepackage{url}
 
@@ -184,6 +185,7 @@
     columns=flexible,
     frame=leftline,
     framesep=11pt,
+    basicstyle=\small\ttfamily,
 }
 
 % checklist
