--- a/xzarsk03-contracts-for-concurrency-01-chapters.tex
+++ b/xzarsk03-contracts-for-concurrency-01-chapters.tex
@@ -637,6 +637,9 @@ is not forwarded, the tool becomes a filter over the event stream. This can be
 used to filter out events that are not interesting to a particular analysis and
 then performing the analysis in the next tool.
 
+\subsection{RoadRunner Synchronization Models}
+{\color{blue}\lipsum[1]}
+
 \subsection{Instrumentation Performed by RoadRunner}
 
 RoadRunner uses a modified version of the ASM framework to instrument the
@@ -673,12 +676,12 @@ public void foo();
     \begin{lstlisting}
 public int bar;
 
-public transient rr.state.ShadowVar __$rr_bar;
+public transient rr.state.ShadowVar __(*\$*)rr_bar;
 
-public void __$rr_put_bar(int, int, rr.state.ShadowThread)
+public void __(*\$*)rr_put_bar(int, int, rr.state.ShadowThread)
   (code omitted)
 
-public int __$rr_get_bar(int, rr.state.ShadowThread)
+public int __(*\$*)rr_get_bar(int, rr.state.ShadowThread)
   (code omitted)
 
 public void foo();
@@ -696,15 +699,66 @@ public void foo();
   15: aload_2
   16: invokespecial #53 // Method __$rr_put_bar:(IILrr/state/ShadowThread;)V
   19: return\end{lstlisting}
-    \caption{\todo{}}
+    \caption{Code from Figure \ref{rrInstBefore} instrumented by RoadRunner. For
+    the \texttt{bar} field, two access methods are added and a new field of type
+    \texttt{ShadowVar}. In the \texttt{foo} method, the \texttt{bar} field is
+    accessed using methods \texttt{\_\_\$rr\_get\_bar} and
+    \texttt{\_\_\$rr\_put\_bar}. These methods take the current shadow thread as
+    an argument which is obtained by calling \texttt{getCurrentShadowThread}.}
 \end{figure}
 
+In RoadRunner, to obtain information about method invocations, most methods are
+instrumented by creating a wrapper around them. The original method is renamed,
+but otherwise left intact (the code may however be further instrumented to
+obtain other information, such as field accesses). Then a wrapper method with
+the same name as the original one is created. The wrapper method generates enter
+and exit events. In order to detect abnormal method exits that are caused by an
+exception being thrown, the call to the original method is wrapped in a try
+block. When an exception is caught, the exit method is generated and the
+exception is re-thrown. An example of a method instrumented by RoadRunner is
+shown in Figure \ref{rrInstMethod}.
 
-\todo{how are fields instrumented}
+\begin{figure}[hbt]
+    \label{rrInstMethod}
+    \begin{lstlisting}
+public int __(*\$*)rr_foo__(*\$*)rr__Original_(int);
+   0: invokestatic  #20 // Method rr/state/ShadowThread
+                        // .getCurrentShadowThread:()Lrr/state/ShadowThread;
+   3: astore_3
+   4: iload_1
+   5: ireturn
 
-\todo{how are methods instrumented}
-\lipsum[1]
+public int foo(int);
+   0: invokestatic  #20 // Method rr/state/ShadowThread
+                        // .getCurrentShadowThread:()Lrr/state/ShadowThread;
+   3: astore_3
+   4: aload_0
+   5: sipush        508
+   8: aload_3
+   9: invokestatic  #27 // Method rr/tool/RREventGenerator
+                        // .enter:(Ljava/lang/Object;ILrr/state/ShadowThread;)V
+  12: aload_0
+  13: iload_1
+  14: invokespecial #29 // Method __(*\$*)rr_foo__(*\$*)rr__Original_:(I)I
+  17: aload_3
+  18: invokestatic  #33 // Method rr/tool/RREventGenerator
+                        // .exit:(Lrr/state/ShadowThread;)V
+  21: goto          29
+  24: aload_3
+  25: invokestatic  #33 // Method rr/tool/RREventGenerator
+                        // .exit:(Lrr/state/ShadowThread;)V
+  28: athrow
+  29: ireturn\end{lstlisting}
+    \caption{Method \texttt{int foo(int a)} instrumented by RoadRunner. The
+    original method was renamed to \texttt{\_\_\$rr\_foo\_\_\$rr\_\_Original\_}
+    and a new method with the original name was created. This method generates
+    enter and exit events and calls the original method.}
+\end{figure}
 
+\subsection{RoadRunner Configuration options}
+
+\todo{what features can be turned on and off}
+{\color{blue}\lipsum[2]}
 
 
 \chapter{Contracts for Concurrency}
@@ -919,7 +973,8 @@ for violations. The trace, however, can get large and make this approach
 unpractical. For this reason, several optimizations are introduced in
 \cite{contracts}, which are presented in the next section.
 
-% TODO: examples of traces
+\todo{examples of traces}
+{\color{blue}\lipsum[2]}
 
 \subsection{On-the-fly Contract Validation}
 
@@ -950,6 +1005,9 @@ instance ends, spoiler instances from the trace window are checked if they
 violate the target. When a spoiler instance ends, target instances from the
 trace window are checked if they are violated by the spoiler. At method exit,
 target and spoiler instances are also discarded when no longer needed.
+
+\todo{more detailed description, examples}
+{\color{blue}\lipsum[1-3]}
 
 
 
@@ -990,7 +1048,8 @@ method exit. The analyzer must work around the fact that the return value (which
 can be also a parameter) is not available at the method entry. Alternatively,
 the contracts should be limited to not use parametrized return values.
 
-\todo{overlapping instances}
+\todo{overlapping instances, entry and exit solved together}
+{\color{blue}\lipsum[2]}
 
 \section{Contract Representation}
 
@@ -1007,6 +1066,7 @@ based on the number and type of their parameters. It should be possible to
 include a constructor in a contract.
 
 \todo{grammar for contract configuration files}
+{\color{blue}\lipsum[1-3]}
 
 Internally, each target and spoiler will be converted from a regular expression
 to a finite automaton, represented by the \texttt{FiniteAutomaton} class, where
@@ -1032,6 +1092,12 @@ argument types, since they are already available in the method descriptor
 (stored in \texttt{MethodInfo}). Also, the analysis performs only identity
 comparison (in the case of objects). Primitive types must be handled correctly
 and compared by their value.
+
+\todo{figure with extended MethodEvent}
+{\color{blue}\lipsum[2]}
+
+\todo{changes to the Tool class - method exit, entry}
+{\color{blue}\lipsum[2-3]}
 
 For dynamic analysis of contracts for concurrency, only a subset of all events
 is required. The RoadRunner framework should be configured or modified to
@@ -1114,10 +1180,36 @@ analyzer a custom event stream without the need for the RoadRunner framework.
 
 
 
-\chapter{Implementation}
+\chapter{Implementation and Testing}
 \label{chFive}
 
+\todo{chapter intro}
+{\color{blue}\lipsum[2]}
+
+\section{ASM 7.0 and Java 11}
 \todo{TODO}
+{\color{blue}\lipsum[2-3]}
+
+\section{General Approaches}
+\todo{usage of vavr.io}
+{\color{blue}\lipsum[1]}
+
+\section{Contract File Parsing}
+\todo{Flex, CUP}
+{\color{blue}\lipsum[1-2]}
+
+\section{Changes in Instrumentation}
+\todo{TODO}
+{\color{blue}\lipsum[1-3]}
+
+\section{Testing}
+\todo{TODO}
+\begin{itemize}
+    \item unit testing of classes
+    \item testing of instrumentation
+    \item functional testing of whole analyzer
+\end{itemize}
+{\color{blue}\lipsum[1-4]}
 
 
 
@@ -1134,3 +1226,6 @@ changes to the RoadRunner itself were described.
 
 A master's thesis that will follow the term project will focus on implementing
 the analyzer and on testing it on real-world programs.
+
+\todo{}
+{\color{blue}\lipsum[1-5]}
