Implementation of instrumentation

--- a/xzarsk03-contracts-for-concurrency-20-bibliography.bib
+++ b/xzarsk03-contracts-for-concurrency-20-bibliography.bib
@@ -178,6 +178,17 @@ series = {POPL '04}
     url = "https://www.fit.vut.cz/study/phd-thesis/364/"
 }
 
+@mastersthesis{janousek,
+    author = "Martin Janou\v{s}ek",
+    type = "Master's thesis",
+    title = "Dynamic Analyzers for SearchBestie Platform",
+    school = "Brno University of Technology, Faculty of Information Technology",
+    year = 2017,
+    location = "Brno, CZ",
+    language = "czech",
+    url = "https://www.fit.vut.cz/study/thesis/19444/"
+}
+
 %    @BOOK{Pravidla,
 %      author =       "Zdeněk Hlavsa and others",
 %      title =        "Pravidla českého pravopisu",
