--- a/xzarsk03-contracts-for-concurrency-30-appendices.tex
+++ b/xzarsk03-contracts-for-concurrency-30-appendices.tex
@@ -1,12 +1,8 @@
-% This file should be replaced with your file with an appendices (headings below are examples only)
+\chapter{Manual}
 
-% Placing of table of contents of the memory media here should be consulted with a supervisor
-%\chapter{Contents of the included storage media}
+\todo{installation and running}
 
-%\chapter{Manual}
+\chapter{Contract Definition Grammar}
+\label{appGrammar}
 
-%\chapter{Configuration file}
-
-%\chapter{Scheme of RelaxNG configuration file}
-
-%\chapter{Poster}
+\todo{include the grammar}
