--- a/xzarsk03-contracts-for-concurrency-01-chapters.tex
+++ b/xzarsk03-contracts-for-concurrency-01-chapters.tex
@@ -1188,14 +1188,15 @@ enclosing class, the method name, the method descriptor, and a list of
 meta-variables. For example:
 
 \begin{lstlisting}
-test/sanity/ArrayList.indexOf(Ljava/lang/Object;)I (X,Y,_)
+test/sanity/ArrayList.set(ILjava/lang/Object;)Ljava/lang/Object; X=Y(Z,_)
 \end{lstlisting}
 
-This represents the \texttt{indexOf} method called on an \texttt{ArrayList} from
-the \texttt{test.sanity} package. The first meta-variable \texttt{X} refers to
-the \texttt{ArrayList} instance, the second one, |texttt{Y}, refers to the
-method parameter, and the last one, denoted by an underscore, refers to the
-return value.
+This represents the \texttt{set} method called on an \texttt{ArrayList} from
+the \texttt{test.sanity} package. The first meta-variable \texttt{X} is the
+return value, \texttt{Y} is the \texttt{ArrayList} instance, and \texttt{Z} is
+the first parameter (integer). The second parameter (object) is marked with free
+meta-variable (\texttt{\_}) meaning that the analyzer will ignore its value. The
+return value or the target of the method can be omitted.
 
 Targets and spoilers are defined using a limited regular expression over
 methods. Concatenation is achieved simply by writing two methods, one after
@@ -1203,30 +1204,32 @@ another, alternation is denoted by a vertical bar (\texttt{|}). The Kleene star
 operator (\texttt{*}) is not allowed. An example of a target definition:
 
 \begin{lstlisting}
-Test.a()V (X) ( Test.b()V (X) | Test.c()V (X) )
+Test.a()V X() ( Test.b()V X() | Test.c()V X() )
 \end{lstlisting}
 
 A contract clause is defined as two regular expressions over methods, separated
 by an arrow and a semicolon at the end. A contract is then a list of clauses. An
-example of a full contract is shown in Figure \ref{contract}.
+example of a full contract is shown in Figure \ref{contract}. The full grammar
+for contracts is shown in Appendix \ref{appGrammar}.
 
 \begin{figure}[hbt]
     \label{contract}
     \begin{lstlisting}
-Map.put(ID)V (M,K,_,_) Map.get(I)D (M,K,_)
-    <- Map.put(ID)V (M,K,_,_) | Map.remove(I)D (M,K,\_) ;
+Map.put(ID)V M(K,_) Map.get(I)D M(K)
+    <- Map.put(ID)V M(K,_) | Map.remove(I)D M(K) ;
 
-Map.contains(D)Z (M,V,\_)
-  ( Map.put(ID)V (M,K,_,_) | Map.get(I)D (M,K,_) | Map.remove(I)D (M,K,\_) )
-  <- Map.put(ID)V (M,K,_,_) | Map.remove(I)D (M,K,\_) ;
+Map.contains(I)Z M(K)
+  ( Map.put(ID)V M(K,_) | Map.get(I)D M.(K) | Map.remove(I)D M(K) )
+  <- Map.put(ID)V M(K,_) | Map.remove(I)D M(K) ;
 \end{lstlisting}
     \caption{Contract from Chapter \ref{chThree} written for a Map with
-    \texttt{int} keys and \texttt{double} values. \todo{}}
+    \texttt{int} keys and \texttt{double} values. The first target matches
+    inserting element to the map at given key and the retrieving it. The target
+    can be invalidated by calling either \texttt{put} or \texttt{get} with the
+    same key. The second target matches checking if a key is present in the map
+    and then modifying the value at given key. The target can be invalidated by
+    replacing the value or by removing it.}
 \end{figure}
-
-
-\todo{grammar for contract configuration files (as an appendix?)}
-{\color{blue}\lipsum[1-3]}
 
 \section{Changes to Instrumentation Performed by RoadRunner}
 
@@ -1264,12 +1267,23 @@ available, for example when the argument instrumentation is turned off. The
 available (for example on method entry), when the method throws an exception, or
 when the method returns \texttt{void}.
 
-For dynamic analysis of contracts for concurrency, only a subset of all events
-is required. The RoadRunner framework should be configured or modified to
+\subsection{Parameter Matching}
+When trying to advance a running instance, method arguments must be checked, if
+they match the previously assigned parameters. For reference types, the equality
+operator (\texttt{==}) is used which compares the addresses of both objects. For
+primitive values that are wrapped in an object, the \texttt{equals()} method
+must be used. As a result, the analyzer will always compare instances of wrapper
+classes (such as \texttt{Integer}) by calling the \texttt{equals()} method, even
+if the instance was created by the program under analysis. This may or may not
+be the intended behavior and the user of the analyzer should be aware of this.
+
+\subsection{Instrumenting Only Contract Methods}
+\todo{For dynamic analysis of contracts for concurrency, only a subset of all
+events is required. The RoadRunner framework should be configured or modified to
 instrument only the necessary actions of the program under analysis. Event types
 that are not used at all, such as memory accesses, should not be instrumented.
 Method entries and exits should be instrumented only in case the method is part
-of a contract.
+of a contract.}
 
 \section{A Contract Validator Tool}
 
